segunda entite gravando
